--- a/background.css
+++ b/background.css
@@ -10,11 +10,14 @@
     position: relative;
     /*width: 100vw;
     height: 100vh;*/
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     /*top: 0;
     left: 0;*/
     background: #0093e9;
     overflow: hidden;
+    display: grid;
+    grid-template-rows: 60px auto;
 }
 
 .background span{
