--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ html {
   }
 
 body{
+    height: 100%;
     min-height: 100vh; 
-    display: grid;
-    grid-template-rows: 1fr auto auto;
+    /*display: grid;
+    grid-template-rows: auto auto auto;*/
 }
 /*HEADER*/
 header{
@@ -28,9 +29,11 @@ header{
 
 .headerContainer{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
     max-width: 1200px;
+    /*height: 100%;*/
     background-color: #0093e9;
     padding: 15px;
     color: #FFFFFF;
@@ -107,6 +110,7 @@ header{
     justify-content: center;
     align-items: center;
     z-index: 4;
+    
 }
 .hero{
     max-width: 1200px;
@@ -116,6 +120,7 @@ header{
     grid-template-columns: 60% 40%;
     justify-items: center;
     padding: 15px;
+    
 }
 
 .heroTexto{
@@ -346,6 +351,7 @@ padding: 10px;
 
 .footerContent{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
@@ -397,3 +403,72 @@ padding: 10px;
 }
 
 /*footer*/
+
+
+
+/*media queries*/
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+
+    .background {
+        grid-template-rows: auto auto;
+    }
+    
+    .hero{
+        max-width: 1200px;
+        background-color: transparent;
+        width: 100%;
+        display: grid;
+        grid-template-columns: auto;
+        
+        justify-items: center;
+        padding: 15px;
+    }
+
+    .heroImg{
+        display: none;
+    }
+
+    .cardLeft{
+        display: grid;
+        grid-template-columns: auto;
+        background-color: #FFFFFF;
+        border-radius: 15px;
+        box-shadow: 0 2px 5px 0 rgb(0 0 0 / 20%), 0 2px 10px 0 rgb(0 0 0 / 10%);
+    }
+
+    .cardLeftImg{
+        border-radius: 15px 15px 0px 0px;
+    }
+
+    .footerContent{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        flex-direction: row;
+        justify-content: center;
+        padding: 5px;
+        border-bottom: 1px solid #FFFFFF;
+    }
+    
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    
+}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    
+}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    
+}
+
+/*media queries*/
