--- a/style.css
+++ b/style.css
@@ -210,6 +210,27 @@ padding: 10px;
 
 }
 
+.contenido__menu{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 15px;
+    justify-content: space-between;
+    font-weight: 500;
+}
+
+.contenido__menu select{
+    padding: 5px;
+    border-radius: 5px;
+    border-color: #42A5F5;
+    font-size: 15px;
+}
+
+.contenido__menu select option{
+    padding: 5px;
+    border-radius: 5px;
+    border-color: #42A5F5;
+}
+
 .cardsContainer{
     background-color: transparent;
     display: flex;
@@ -280,6 +301,70 @@ padding: 10px;
     padding-bottom: 5px;
     opacity: 0.8;
 }
+
+.cardLeftDificultad{
+    padding: 5px;
+    display: flex;
+}
+
+.cardLeftDificultad div{
+    
+    border-radius: 5px;
+    padding: 5px 0px 5px 5px;
+    font-size: 12px;
+    
+}
+
+.cardLeftDificultad div span{
+    padding: 5px 10px 5px 10px;
+    margin-left: 10px;
+    font-size: 12px;
+    color: #FFFFFF;
+}
+
+.dificultad1{
+    border: 1px solid #42A5F5;
+    color: #42A5F5;
+}
+.dificultad1 span{
+    background-color: #42A5F5;
+}
+
+.dificultad2{
+    border: 1px solid #43A047;
+    color: #43A047;
+}
+.dificultad2 span{
+    background-color: #43A047;
+}
+
+.dificultad3{
+    border: 1px solid #FFD600;
+    color: #FFD600;
+}
+.dificultad3 span{
+    background-color: #FFD600;
+}
+
+.dificultad4{
+    border: 1px solid #FF9800;
+    color: #FF9800;
+}
+.dificultad4 span{
+    background-color: #FF9800;
+}
+
+.dificultad5{
+    border: 1px solid #FF5722;
+    color: #FF5722;
+}
+.dificultad5 span{
+    background-color: #FF5722;
+}
+
+
+
+
 
 
 .cardLeftTextoTags{
